404 page and IE flex wrap fix

--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -7,7 +7,8 @@
 
 // Buttons
 #lead,
-#cta {
+#cta,
+.error-404 {
 	a {
 		color: $color-darkgrey;
 		text-decoration: none;
