--- a/sass/views/_front-page.scss
+++ b/sass/views/_front-page.scss
@@ -7,7 +7,6 @@
 	background-color: #1d242c;
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	position: relative;
 	min-height: 80vh;
 	max-width: $layout-max-width;
@@ -30,7 +29,7 @@
 		@include responsive-font(2.4vw, 22px, 48px);
 		color: #fff;
 		text-align: center;
-		margin: 0;
+		margin: 0 auto;
 		padding: 0;
 		position: relative;
 		z-index: 2;
